# webvirtbackend

./: .dockerignore  .flake8  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: backend.yml  devcontainer.json  haproxy.cfg
account/: authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
account/fixtures/: initial_data.json  token.json  user.json
account/migrations/: 0001_initial.py  0002_user_is_email_verified.py
admin/: forms.py  mixins.py  urls.py  views.py
admin/account/: forms.py  urls.py  views.py
admin/compute/: filters.py  forms.py  tables.py  urls.py  views.py
admin/dbaas/: filters.py  tables.py  urls.py  views.py
admin/dbms/: filters.py  forms.py  tables.py  urls.py  views.py
admin/firewall/: filters.py  tables.py  urls.py  views.py
admin/floating_ip/: filters.py  tables.py  urls.py  views.py
admin/image/: filters.py  forms.py  tables.py  urls.py  views.py
admin/issue/: filters.py  tables.py  urls.py  views.py
admin/lbaas/: filters.py  tables.py  urls.py  (+1 more)
api/: urls.py
billing/: models.py  serializers.py  signals.py  tasks.py  views.py
compute/: helper.py  models.py  webvirt.py
dbaas/: apps.py  models.py  serializers.py  tasks.py  views.py
firewall/: apps.py  models.py  serializers.py  tasks.py  utils.py  views.py
floating_ip/: apps.py  models.py  serializers.py  tasks.py  utils.py  views.py
image/: models.py  serializers.py  tasks.py  utils.py  views.py
keypair/: models.py  serializers.py  views.py
lbaas/: apps.py  helper.py  models.py  serializers.py  shared.py  tasks.py  views.py
lbass/: apps.py  models.py
libvrt/: connection.py  create.py  hostdetails.py  instance.py  interface.py  network.py  nwfilter.py  rwlock.py  secrets.py  storage.py  util.py
metadata/: urls.py
network/: helper.py  models.py  tasks.py
project/: models.py  serializers.py  views.py
region/: models.py  serializers.py  views.py
requirements/: develop.txt  production.txt
singlepage/: apps.py  urls.py  views.py
size/: models.py  serializers.py  views.py
space/: apps.py  models.py
ssh_key/: apps.py  models.py
templates/: 403.html  403_csrf.html  404.html  500.html  redoc.html
theme/: crispy_fields.py  crispy_forms.py
virtance/: helper.py  models.py  provision.py  serializers.py  tasks.py  utils.py  views.py
webvirtcloud/: asgi.py  authentication.py  celery.py  email.py  permissions.py  settings.py  urls.py  views.py  wsgi.py
(+286 files in other folders)
