[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '\.run|\.git|.venv|\.mysql|\.vscode|\.devcontainer|migrations|playbooks'

[project]
name = "WebVirtBackend"
version = "0.1.0"
description = "WebVirtCloud backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible==10.0.1",
    "celery==5.2.7",
    "crispy-tailwind==0.5.0",
    "django-htmx>=1.21.0",
    "django==4.2.18",
    "django-celery-results==2.4.0",
    "django-crispy-forms==2.0",
    "djangorestframework==3.14.0",
    "gunicorn==20.1.0",
    "mysqlclient==2.1.1",
    "numpy==1.25.2",
    "paramiko==3.4.1",
    "passlib==1.7.4",
    "requests==2.28.2",
    "weasyprint==60.2",
    "websockify==0.10.0",
    "django-tables2>=2.7.5",
    "django-filter>=24.3",
]

[dependency-groups]
dev = [
    "ansible==10.0.1",
    "black>=24.10.0",
    "bpython>=0.25",
    "celery==5.2.7",
    "crispy-tailwind==0.5.0",
    "django-htmx>=1.21.0",
    "django==4.2.18",
    "django-browser-reload>=1.17.0",
    "django-celery-results==2.4.0",
    "django-cors-headers>=4.6.0",
    "django-crispy-forms==2.0",
    "django-debug-toolbar>=5.0.1",
    "djangorestframework==3.14.0",
    "drf-yasg>=1.21.8",
    "flake8>=7.1.1",
    "gunicorn==20.1.0",
    "mysqlclient==2.1.1",
    "numpy==1.25.2",
    "paramiko==3.4.1",
    "passlib==1.7.4",
    "requests==2.28.2",
    "weasyprint==60.2",
    "websockify==0.10.0",
    "django-tables2>=2.7.5",
    "django-filter>=24.3",
]
