[project]
name = "WebVirtBackend"
version = "0.1.0"
description = "WebVirtCloud backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ansible==10.0.1",
    "celery==5.2.7",
    "crispy-tailwind==0.5.0",
    "django-htmx>=1.21.0",
    "django==4.2.20",
    "django-celery-results==2.4.0",
    "django-crispy-forms==2.0",
    "djangorestframework==3.14.0",
    "gunicorn==20.1.0",
    "mysqlclient==2.1.1",
    "numpy==1.25.2",
    "paramiko==3.4.1",
    "passlib==1.7.4",
    "requests==2.28.2",
    "weasyprint==60.2",
    "websockify==0.10.0",
    "django-tables2>=2.7.5",
    "django-filter>=24.3",
    "django-tailwind>=3.8.0",
]

[dependency-groups]
dev = [
    "bpython>=0.25",
    "django-browser-reload>=1.17.0",
    "django-cors-headers>=4.6.0",
    "django-debug-toolbar>=5.0.1",
    "drf-yasg>=1.21.8",
    "flake8>=7.1.1",
    "django-stubs>=5.1.3",
    "ruff>=0.11.5",
]
